--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Giphy Search</title>
+    <link rel="stylesheet" href="https://use.typekit.net/yjs8hcu.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
